--- a/.android/local.properties
+++ b/.android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=/Users/liuying/Library/Android/sdk
 flutter.sdk=/Users/liuying/development/flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
