--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ flutter:
     # To add Flutter specific assets to your application, add an assets section,
     # like this:
   assets:
-      - images/lake.jpeg
+      - images/lake.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
